Colocando descrição no Readme sobre o trabalho

--- a/readme
+++ b/readme
@@ -1,1 +1,37 @@
+# Jogo Campo Minado🎮
 
+
+## Componente: Introdução a Técnicas de Programação
+
+___
+
+### Alunos
+
+- Katriel Araújo
+- Julio Cesar
+
+____
+
+### Introdução
+
+Esse trabalho é uma avaliação da disciplina de Introdução a Técnicas de Programação foi feito em dupla e será enviado via ***GitHub Classroom***. Feito 100% em linguagem de programação C.
+
+___
+
+### Modo de Avaliação
+
+O projeto será avaliado através de uma entrevista quanto a aplicação
+adequada das técnicas de programação vistas em aula, quanto à organização do
+código-fonte e quanto à implementação das funcionalidades do jogo.
+
+Quanto à aplicação das técnicas de programação, vocês devem empregar ao
+menos 5 dos tópicos abaixo de modo adequado ao problema. Este item será
+avaliado considerando a relevância do tópico para solução do problema e em como
+ele foi aplicado no desenvolvimento do código:
+
+- Estruturas, enumerações e typedef;
+- Alocação dinâmica de memória;
+- Passagem por Referência;
+- Recursão;
+- Manipulação de Arquivos;
+- Modularização do Código.
